--- a/Pages/Ads/Ads.html
+++ b/Pages/Ads/Ads.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -5,48 +6,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="./CSS/Style.css">
-
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
-
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="./materialize/css/materialize.min.css">
-
-
+    <link rel="stylesheet" href="../../materialize/css/materialize.min.css">
+    <link rel="stylesheet" href="./Ads.css">
 </head>
 
 <body>
 
+
+
+
     <!-- ************NAVBAR*********** -->
-    <div class="container-fluid" id="top">
-        <div class="navbar-fixed">
+    <div class="container-fluid">
+        <div class="navbar-fixed ">
             <nav>
                 <div class="nav-wrapper ">
-                    <a href="#!" class="brand-logo " id="logo"><i class="material-icons right">shopping_cart</i>OLX</a>
+                        <a href="#!" class="brand-logo " id="logo"><i class="material-icons right">shopping_cart</i>OLX</a>
                     <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                     <ul class="right hide-on-med-and-down">
                         <li><a href="../../index.html">Home</a></li>
-                        <li id="add" class="active"><a href="badges.html">POST ADD</a></li>
+                        <li id="add" class="active"><a href="badges.html">Admin Login</a></li>
 
-                        <li id="fb-li" onClick="fbLogin()"><a href="#"><img id="fb" src="./Images/fb.png" /> FB
+                        <li id="fb-li" onClick="fbLogin()"><a href="#"><img id="fb" src="../../images/fb.png" /> Student
                                 Login</a></li>
                     </ul>
                 </div>
             </nav>
         </div>
 
-        <ul class="sidenav" id="mobile-demo">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">POST ADD</a></li>
-
-            <li id="fb-li" onclick="fbLogin()"><a href="#"><img id="fb-mob" src="./Images/fb.png" /> FB
-                    Login</a>
-            </li>
-        </ul>
-
     </div>
+    <!-- *****************MOBILE VIEW**************** -->
+
+    <ul class="sidenav" id="mobile-demo">
+        <li><a href="../../index.html">Home</a></li>
+        <li><a href="#">Admin Login</a></li>
+
+        <li id="fb-li" onclick="fbLogin()"><a href="#"><img id="fb-mob" src="./../../images/fb.png" />Student
+                Login</a>
+        </li>
+    </ul>
 
 
 
@@ -65,7 +65,7 @@
 
                 <div class="input-field col s12 z-depth-5 " id="search">
                     <i class="material-icons prefix ">search</i>
-                    <input id="icon_prefix" type="text" class="validate">
+                    <input id="icon_prefix" type="text" autocomplete="off" class="validate">
                     <label for="icon_prefix">Search</label>
                 </div>
 
@@ -73,12 +73,12 @@
 
 
             <!-- ***********DROPDOWN************** -->
-            <div class="col l3 m12 s12">
+            <!-- <div class="col l3 m12 s12">
                 <div class="z-depth-5" id="categories">
                     <a class='dropdown-trigger' id="cat" href='#' data-target='dropdown1'>CATEGORIES TO SEARCH
                         &#8744;</a>
 
-                    <!-- Dropdown Structure -->
+
                     <ul id='dropdown1' class='dropdown-content'>
                         <li><a href="#!">Mobiles</a></li>
                         <li><a href="#!">Vehicles</a></li>
@@ -90,37 +90,41 @@
 
                     </ul>
                 </div>
+            </div> -->
+
+            <div class="col col l3 m12 s12">
+                <div class="input-field col s12 z-depth-5" id="categories">
+                    <select id="select">
+                        <optgroup label="">
+                            <option value="5" selected disabled>CATEGORIES </option>
+                            <option value="Mobiles">Mobiles</option>
+                            <option value="Cars">Cars</option>
+                            <option value="Clothes">Clothes</option>
+                            <option value="Jobs">Jobs</option>
+                            <option value="Books">Books</option>
+                        </optgroup>
+                    </select>
+
+                </div>
+
             </div>
 
-
-
         </div>
 
     </div>
 
-    <!-- ***************BODY IMAGE************** -->
 
 
-    <div class="row" id="img">
-        <div class="col xl-12 push-l8 l4 push-m6 m6 s12">
-            <h1 id="body-text">PAKISTAN'S NUMBER 1 MARKET PLACE!</h1>
-        </div>
-    </div>
-
-    <!-- ****************CARDS************** -->
+    <!-- ******************ADS**************** -->
 
 
-    <div class="row">
-        <div class="col s12">
-            <h1 style="text-align:center; color:rgb(63, 4, 87);">ADS SUGGESTED FOR YOU!</h1>
-        </div>
-    </div>
+
     <div class="row" id="adds">
-        <div class="col sm12  m4 l4">
+        <!-- <div class="col sm12  m4 l4">
             <div class="door">
                 <div class="card z-depth-4">
                     <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="./Images/pic.jpg">
+                        <img class="activator cardImg"  src="../../Images/pic.jpg">
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">NOKIA 6<i
@@ -140,7 +144,7 @@
             <div class="door">
                 <div class="card z-depth-4">
                     <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="./Images/pic.jpg">
+                        <img class="activator cardImg"  src="../../Images/pic.jpg">
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">HTC 7<i
@@ -160,7 +164,7 @@
             <div class="door">
                 <div class="card z-depth-4">
                     <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="./Images/pic.jpg">
+                        <img class="activator cardImg"  src="../../Images/pic.jpg">
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">HP Laptop<i
@@ -181,7 +185,7 @@
             <div class="door">
                 <div class="card z-depth-4">
                     <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="./Images/pic.jpg">
+                        <img class="activator cardImg"  src="../../Images/pic.jpg">
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">NOKIA 6<i
@@ -202,7 +206,7 @@
             <div class="door">
                 <div class="card z-depth-4">
                     <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="./Images/pic.jpg">
+                        <img class="activator cardImg"  src="../../Images/pic.jpg">
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">NOKIA 6<i
@@ -225,7 +229,7 @@
             <div class="door">
                 <div class="card z-depth-4">
                     <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="./Images/pic.jpg">
+                        <img class="activator cardImg" src="../../Images/pic.jpg">
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">NOKIA 6<i
@@ -240,50 +244,19 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
-    </div>
-    <!-- ************FOOOOTER*********** -->
 
 
-    <!-- <a style="position:absolute;" href="#top" class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">add</i></a> -->
 
-    <footer class="page-footer">
-        <div class="container" id="upper-foot">
-            <div class="row">
-                <div class="col l6 s12">
-                    <h5 class="white-text">Footer Content</h5>
-                    <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer
-                        content.</p>
-                </div>
-                <!-- <div class="col l4 offset-l2 s12">
-                    <h5 class="white-text">Links</h5>
-                    <ul>
-                        <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-                        <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-                        <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-                        <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
-                    </ul>
-                </div> -->
-            </div>
-        </div>
-        <div class="footer-copyright">
-            <div class="container">
-                © 2019 Copyright Ibrahim Shah
-                <a class="grey-text text-lighten-4 right" href="#!">OLX Pakistan</a>
-            </div>
-        </div>
-    </footer>
-
-
-    <!-- *************JAVASCRIPT*************** -->
-
+    <!-- ******************SCRIPT*************** -->
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <!-- Compiled and minified JavaScript -->
 
 
-    <script src="./materialize/js/materialize.min.js"></script>
+    <script src='../../materialize/js/materialize.min.js'></script>
+
 
 
     <script src="https://www.gstatic.com/firebasejs/5.8.3/firebase.js"></script>
@@ -299,15 +272,27 @@
         };
         firebase.initializeApp(config);
     </script>
-
+    </script>
+    <script src="./Ads.js"></script>
     <script>
 
+        document.addEventListener('DOMContentLoaded', function () {
+            var elems = document.querySelectorAll('select');
+            // var instances = M.FormSelect.init(elems, options);
+        });
+
+        // Or with jQuery
+
+        $(document).ready(function () {
+            $('select').formSelect();
+        });
         $('.dropdown-trigger').dropdown();
 
         $(document).ready(function () {
             $('.sidenav').sidenav();
         });
     </script>
+
 </body>
 
 </html>
