--- a/Pages/Display/Display.html
+++ b/Pages/Display/Display.html
@@ -51,7 +51,7 @@
 
     <div class="container-fluid">
         <h1 style="color:rgb(99, 9, 99);" class="head">AD DETAILS</h1>
-        <div class="row">
+        <div class="row " id="wrap">
             <div class="col s12 m12 l12 ">
                 <div class="wrap">
                     <div class="row">
@@ -82,19 +82,23 @@
 
                 </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col s12 l12 m12 ">
 
-                <div class="descr">
-                    <h3>DESCRIPTION</h3>
-                    <p class="flow-text" style="padding:5px; text-align:center" >Contact 03219997876
+            <div class="row">
+                <div class="col s12 l12 m12 ">
 
-                        A 4-Kanal farmhouse with a 3.5kanal lush green garden, one big hall, bedroom with attached bath
-                        and a kitchen. Indoor functions at Rs.15000 per day and outdoor at Rs.20000 per day. Ideal for
-                        engagements, birthday parties, mehndis etc. 4km drive from DHA Phase.7 and BRB. 7km away from
-                        LSE.</p>
+                    <div class="descr">
+                        <h3>DESCRIPTION</h3>
+                        <p class="flow-text" style="padding:5px; text-align:center">Contact 03219997876
 
+                            A 4-Kanal farmhouse with a 3.5kanal lush green garden, one big hall, bedroom with attached
+                            bath
+                            and a kitchen. Indoor functions at Rs.15000 per day and outdoor at Rs.20000 per day. Ideal
+                            for
+                            engagements, birthday parties, mehndis etc. 4km drive from DHA Phase.7 and BRB. 7km away
+                            from
+                            LSE.</p>
+
+                    </div>
                 </div>
             </div>
         </div>
